--- a/introduction.tex
+++ b/introduction.tex
@@ -20,77 +20,44 @@ There are many different protocols for building consensus based on requirements 
 consistency, threat model, and failure model. Traditionally, protocols that achieve consensus for arbitrary
 (i.e. Byzantine) faults require several rounds of explicit voting. While this approach provides high throughput and
 finality of commits, its reliance on a well-known, generally static voting block and the heavy use of communication
-(multiple rounds of N^2 messages) limit its use to reletively small, localized, and stable applications. Bitcoin
-introduced a new method for achieving consensus, called Nakamoto consensus, that supports broad participation from a
-dynamic group of participants. Nakamoto consensus relies on uncoordinated, distributed leader election that is efficient
-for communication, but often very computationally intense. For example, Bitcoin uses ``proof of work'', a computation to
-solve a cryptographic puzzle through repetitive ``guess and test''; a process that consumes gigawatts of power. The
-elected leader is granted unilateral authority to propose the next block in the blockchain. 
+(multiple rounds of N^2 messages) limit its use to reletively small, localized, and stable applications. 
 
-This paper describes a new leader election algorithm designed for Nakamoto style consensus, called ``Proof of Elapsed
-Time'' or PoET, that elects leaders through a simple computation in a trusted execution environment provided by
-commodity processors. PoET preserves the fairness and integrity of leader election provided by proof-of-work without
-high cost of electricity and custom hardware. This allows deployment of highly-resilient, fault tolerant applications
-for a dynamic community using commonly available computing resources. 
+Bitcoin introduced a new method for achieving consensus, called Nakamoto consensus, that supports broad participation
+from a dynamic group of participants. Nakamoto consensus relies on uncoordinated, distributed leader election that is
+efficient for communication, but often very computationally intense. For example, Bitcoin elects the leader using
+``proof-of-work'', a race to solve a cryptographic puzzle through repetitive ``guess and test''. The first participant
+to solve the puzzle is granted unilateral authority to propose the next block that will be added to the blockchain.
+While Nakamoto consensus provides a global agreement protocol that is highly resilient to faults, the computational
+characteristics of proof-of-work drive processing to custom hardware that can consume gigawatts of power~\cite{}.
+
+This paper describes a new leader election algorithm designed for Nakamoto consensus, called ``Proof of Elapsed Time''
+or PoET, that elects leaders through a simple computation in a trusted execution environment provided by commodity
+processors.  PoET is based on the observation that proof-of-work, at its core, is a method for generating and enforcing
+random wait times--proof-of-work elects as leader the first participant to solve the cryptographic puzzle, a time that
+is a random interval drawn from an exponential distribution. With PoET, participants use Intel's Software Guard
+Extensions (SGX)~\cite{} to generate and then enforce a random wait time without the cryptographic puzzle. Where
+proof-of-work can verify correctness by providing the solution to the puzzle, PoET uses an attestation of correctness
+that is provided by the trusted execution environment; any participant can verify that the wait time was generated
+correctly and enforced.  In this way PoET preserves the fairness and integrity of leader election provided by
+proof-of-work without high cost of electricity and custom hardware. This allows deployment of highly-resilient, fault
+tolerant applications for a dynamic community using commonly available computing resources.
 
 % -----------------------------------------------------------------
-Unfortunately, there are a variety of limitations that handicap the block chain in its current
-instantiation and prevent it from being used for other (potentially) useful purposes. We focus on
-leveraging Intel's SGX environment [AGJS13] to re-engineer the proof of work to a proof of wait,
-creating a new lottery-based consensus protocol. This will provide greater efficiency and reduce
-the amount of energy used and high costs that we currently see.
+%% Unfortunately, there are a variety of limitations that handicap the block chain in its current
+%% instantiation and prevent it from being used for other (potentially) useful purposes. We focus on
+%% leveraging Intel's SGX environment [AGJS13] to re-engineer the proof of work to a proof of wait,
+%% creating a new lottery-based consensus protocol. This will provide greater efficiency and reduce
+%% the amount of energy used and high costs that we currently see.
 
-The key concept of the proof of wait is a guaranteed wait time, provided through the Trusted
-Execution Environment (TEE) that we get with SGX. Each \miner" will request a wait time from
-the TEE, and the miner with the lowest wait time \wins," thus getting to create the next block.
-In order to prove that the node did indeed wait the claimed time, an attestation is also created
-within the TEE. This validation will be done using the Enhanced Privacy ID (EPID) [BL07, BL09]
-scheme
+%% The key concept of the proof of wait is a guaranteed wait time, provided through the Trusted
+%% Execution Environment (TEE) that we get with SGX. Each \miner" will request a wait time from
+%% the TEE, and the miner with the lowest wait time \wins," thus getting to create the next block.
+%% In order to prove that the node did indeed wait the claimed time, an attestation is also created
+%% within the TEE. This validation will be done using the Enhanced Privacy ID (EPID) [BL07, BL09]
+%% scheme
 
-
-Consensus is the process of building agreement amongst a group of mutually distrusting participants. 
-% say something about blockchain applications
-
-There are many different protocols for building consensus based on requirements related to performance, scalability,
-consistency, threat model, and failure model. Traditionally, protocols that achieve consensus for arbitrary
-(i.e. Byzantine) faults require several rounds of explicit voting. While this approach provides high throughput and
-finality of commits, its reliance on a well-known, generally static voting bloc and the heavy use of communication
-(multiple rounds of N^2 messages) limit its use to reletively small, localized, and stable applications. Bitcoin
-introduced a new method for achieving consensus, called Nakamoto consensus, that supports broad participation from a
-very dynamic group of participants. Nakamoto consensus relies on uncoordinated, distributed leader election that is
-often very computationally intense. For example, Bitcoin uses ``proof of work'', a computation to solve a cryptographic
-puzzle through repetitive ``guess and test''; a process that consumes gigawatts of power.
-
-This paper describes a new leader election algorithm designed for Nakamoto style consensus, called ``Proof of Elapsed
-Time'' or PoET, that elects leaders through a simple computation in a trusted execution environment provided by
-commodity processors. PoET preserves the fairness and integrity of leader election provided by proof-of-work without
-high cost of electricity and custom hardware. This allows deployment of highly-resilient, fault tolerant applications
-for a dynamic community using commonly available computing resources. 
-
-
-
-Bitcoin introduced an alternative approach, often called Nakamoto consensus~\cite{}, where participants implicitly vote
-by building on a particular chain. 
-%Open participation, O(N) messages with high probability, 
-
-often referred to as Nakamoto consensus, elects
-a leader through some form of ``lottery''. The leader then proposes a block that can be added to a chain of previously
-committed blocks.
-
-
-Nakamoto consensus was introduced in Bitcoin, where the first participant to successfully solve a cryptographic
-puzzle wins the leader-election lottery. The elected leader broadcasts the new block to the rest of the participants who
-implicitly vote to accept the block by adding the block to a chain of accepted blocks and proposing subsequent
-transaction blocks that build on that chain.
-
-The first, called PoET for ``proof of elapsed time'', is a lottery protocol that builds on trusted execution
-environments provided by Intel's Software Guard Extensions (SGX) to address the needs of large populations of
-participants.
-
-Sawtooth Lake provides a Nakamoto consensus algorithm called PoET. As with Bitcoin PoET uses a lottery for leader
-election based on a guaranteed wait time provided through a trusted execution environment. 
-
-For the purpose of achieving distributed consensus efficiently, a good lottery function has several characteristics:
+For the purpose of achieving distributed consensus efficiently, a good leader election function has several
+characteristics:
 
 \begin{itemize}
 \item Fairness:
@@ -102,17 +69,6 @@ For the purpose of achieving distributed consensus efficiently, a good lottery f
 \item Verification:
   It should be relatively simple for all participants to verify that the leader was legitimately selected. 
 \end{itemize}
-
-PoET uses a trusted execution environment (the SLDL implementation uses Intel's SGX) to ensure the safety and randomness
-of the leader election process without requiring the costly investment of power and specialized hardware inherent in
-most ``proof'' algorithms.
-
-Every PoET validator requests from a trusted function a random time to wait before claiming leadership. The validator
-with the shortest wait time for a particular transaction block is implicitly elected the leader. Figure 4 provides
-pseudo-code for two functions that could be executed within a trusted execution environment. The function
-``CreateTimer'' creates a timer for a transaction block that is guaranteed to have been created by the TEE. The
-``CheckTimer'' function verifies that the timer was created by the TEE and, if it has expired, creates an attestation
-that can be used to verify that validator did, in fact, wait the allotted time before claiming the leadership role.
 
 The PoET leader election algorithm meets the criteria for a good lottery algorithm. It randomly distributes leadership
 election across the entire population of validators with distribution that is similar to what is provided by other
