start to add material for poet

--- a/poet.tex
+++ b/poet.tex
@@ -3,3 +3,14 @@
 \label{sec_poet}
 
 This is PoET.
+
+\begin{center}
+  \includegraphics[scale=.75]{figures/PoET_Flow.png} \
+  \caption{Control flow in the PoET protocol}
+  \label{fig:poetflow}
+\end{center}
+
+\subsection{Local Mean Computation}
+
+\subsection{Fork Resolution}
+
